# azihsm-sdk

./: CONTRIBUTING.md  Cargo.toml  README.md
.config/: nextest.toml
.github/workflows/: codeql.yml  rust.yml
api/docs/: design-resiliency.md
api/lib/: Cargo.toml
api/lib/src/: error.rs  lib.rs  partition.rs  resiliency.rs  session.rs
api/native/: cbindgen.toml
api/native/doc/: chapter_02_part.md  chapter_06_key_ops.md  chapter_09_data_structs.md
api/native/src/: key_mgmt.rs  lib.rs  partition.rs  resiliency.rs  utils.rs
api/tests/: Cargo.toml
api/tests/cpp/: CMakeLists.txt  multi_process_tests.cpp  partition_tests.cpp
api/tests/src/: lib.rs  partition_tests.rs  resiliency_tests.rs
crates/resiliency_macro/: Cargo.toml
crates/resiliency_macro/src/: lib.rs
ddi/emu/src/: dev.rs  lib.rs
ddi/interface/src/: lib.rs
ddi/lib/: Cargo.toml
ddi/lib/src/: lib.rs
ddi/mock/src/: dev.rs
ddi/nix/src/: dev.rs
ddi/res_test_dev/: Cargo.toml
ddi/res_test_dev/src/: ddi.rs  dev.rs  fault.rs  lib.rs
ddi/sim/src/: dispatcher.rs  session.rs
ddi/sock/: Cargo.toml
ddi/sock/proto/: Cargo.toml
ddi/sock/proto/src/: lib.rs
ddi/sock/src/: ddi.rs  dev.rs  lib.rs
ddi/tbor/types/: Cargo.toml
ddi/test_helpers/: Cargo.toml
ddi/test_helpers/src/: get_sealed_bk3.rs  init_bk3.rs  lib.rs
ddi/win/src/: dev.rs
docs/tbor-ddi/: README.md
docs/tbor-ddi/commands/: api_rev.md  part_final.md  part_info.md  part_init.md  psk_change.md  sd_sealing_key_gen.md  session_close.md  session_open_finish.md  session_open_init.md
fw/core/io/: Cargo.toml
fw/core/lib/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/testfiles/: env.sh
plugins/ossl_engine/openssl-engine/: Cargo.toml
plugins/ossl_engine/openssl-engine/src/: engine.rs  error.rs  lib.rs
plugins/ossl_engine/openssl-sys-engine/: build.rs
plugins/ossl_prov/: CMakeLists.txt  README.md
plugins/ossl_prov/inc/: azihsm_ossl_base.h  azihsm_ossl_base.h.in  azihsm_ossl_file_io.h  azihsm_ossl_hsm.h  azihsm_ossl_names.h  azihsm_ossl_pkey_param.h  azihsm_ossl_resiliency.h  azihsm_ossl_rsa.h  azihsm_ossl_skeymgmt.h
plugins/ossl_prov/integration-tests/nginx/: Cargo.toml
plugins/ossl_prov/integration-tests/nginx/src/: nginx_tests.rs
plugins/ossl_prov/integration-tests/nginx/testfiles/: negative_provider_required.sh  setup.sh  verify_cert_properties.sh  verify_tls_endpoint.sh
tools/resiliency_stress/: Cargo.toml  README.md
xtask/: Cargo.toml
xtask/src/: coverage.rs  coverage_report.rs  fmt.rs  integration_tests.rs  main.rs  nextest_report.rs  precheck.rs  validate_members.rs
(+280 files in other folders)
