# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2021"
name = "azihsm_ddi_sock"
version = "0.1.0"
# The wire-protocol crate lives in a nested directory and is its own
# workspace member; exclude it from this package.
exclude = ["proto"]

[lib]
doctest = false

[dependencies]
azihsm_ddi_interface.workspace = true
azihsm_ddi_mbor_codec.workspace = true
azihsm_ddi_mbor_types.workspace = true
azihsm_ddi_sock_proto.workspace = true
azihsm_ddi_tbor_codec.workspace = true
azihsm_ddi_tbor_types.workspace = true
azihsm_fw_hsm_io.workspace = true
parking_lot.workspace = true
tracing.workspace = true

[lints]
workspace = true
