# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2024"
name = "openssl-engine"
publish = false
version = "0.1.0"

[features]
default = []
engine = ["dep:thiserror", "dep:tracing", "openssl-sys-engine/engine"]

[dependencies]
openssl-sys-engine.workspace = true
thiserror = { optional = true, workspace = true }
tracing = { optional = true, workspace = true }

[lints]
workspace = true
